<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.easyhoms.easydoctor.register.activity.RegisterActivity">


    <com.easyhoms.easydoctor.common.view.MyActionbar
        app:ma_bottom_line_visible="true"
        app:ma_style="white"
        app:ma_title="@string/new_user_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.easyhoms.easydoctor.common.view.DescribeEditView
        app:dev_line_focus="true"
        android:layout_marginTop="50dp"
        android:id="@+id/register_name_dev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dev_hint="@string/real_name"
        app:dev_title="@string/name"/>

    <com.easyhoms.easydoctor.common.view.DescribeEditView
        app:dev_line_focus="true"
        android:id="@+id/register_phone_dev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:dev_hint="@string/login_phone_will_be_account"
        app:dev_title="@string/phone"/>

    <com.easyhoms.easydoctor.common.view.DescribeEditView
        app:dev_line_focus="true"
        android:id="@+id/register_auth_dev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:dev_auth_text="@string/send_auth_code"
        app:dev_auth_visible="true"
        app:dev_hint="@string/auth"
        app:dev_title="@string/auth"/>

    <com.easyhoms.easydoctor.common.view.DescribeEditView
        app:dev_line_focus="true"
        android:id="@+id/register_password_dev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dev_hint="@string/enter_password"
        app:dev_title="@string/password"/>

    <TextView
        android:id="@+id/register_register_tv"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/login_password_dev"
        android:layout_marginTop="56dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_round_bg_blue_tv"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/register"
        android:textSize="@dimen/text_16"/>

    <TextView
        android:id="@+id/register_protocol_tv"
        android:textSize="@dimen/text_14"
        android:layout_marginTop="12dp"
        android:textColor="@color/remind"
        android:text="@string/register_protocol"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>
