<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <ImageView
        android:layout_centerHorizontal="true"
        android:id="@+id/login_main_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:src="@drawable/ic_logo"/>

    <com.easyhoms.easydoctor.common.view.DescribeEditView
        android:id="@+id/login_phone_dev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_main_img"
        android:layout_marginTop="40dp"
        app:dev_hint="@string/enter_phone"
        app:dev_line_focus="true"
        app:dev_title="@string/phone"/>

    <com.easyhoms.easydoctor.common.view.DescribeEditView
        android:id="@+id/login_password_dev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_phone_dev"
        app:dev_hint="@string/enter_password"
        app:dev_is_password="true"
        app:dev_line_focus="true"
        app:dev_title="@string/password"/>

    <TextView
        android:id="@+id/login_tv"
        style="@style/style_login_tv"
        android:layout_below="@id/login_password_dev"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/login_forget_pass_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/login_tv"
        android:layout_gravity="right"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="20dp"
        android:paddingTop="12dp"
        android:text="@string/login_forget_password"
        android:textColor="@color/main_color_blue"
        android:textSize="@dimen/text_14"/>

    <TextView
        android:id="@+id/login_register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/login_tv"
        android:layout_gravity="right"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingTop="12dp"
        android:text="@string/login_register"
        android:textColor="@color/main_color_blue"
        android:textSize="@dimen/text_14"/>


</RelativeLayout>

