<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.easyhoms.easydoctor.my.activity.personal.MyDataActivity">

    <com.easyhoms.easydoctor.common.view.MyActionbar
        android:id="@+id/my_data_ma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ma_title="@string/my_data"/>

    <RelativeLayout
        android:id="@+id/set_head_rl"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="@color/white"
        >

        <View
            android:id="@+id/top_line_v"
            style="@style/style_line"/>

        <TextView
            android:id="@+id/menu_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/top_line_v"
            android:layout_marginLeft="@dimen/height_16"
            android:gravity="center_vertical"
            android:text="@string/change_head_img"
            android:textColor="@color/text_body_strong"
            android:textSize="@dimen/text_16"
            />

        <ImageView
            android:id="@+id/next_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/height_16"
            android:src="@drawable/icon_next"
            />

        <com.netease.nim.common.ui.imageview.HeadImageView
            android:id="@+id/head_hiv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/next_img"
            android:src="@drawable/doctors_default_head"
            android:text="@string/change_user_message"/>
    </RelativeLayout>

    <com.easyhoms.easydoctor.common.view.MenuItem
        android:id="@+id/set_name_mi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mi_describe="张"
        app:mi_title="@string/real_name"
        app:mi_type="center"/>

    <com.easyhoms.easydoctor.common.view.MenuItem
        android:id="@+id/set_sex_mi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mi_describe="张"
        app:mi_title="@string/sex"
        app:mi_type="center"/>

    <com.easyhoms.easydoctor.common.view.MenuItem
        android:id="@+id/set_birth_mi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mi_describe="张"
        app:mi_title="@string/birthday"
        app:mi_type="bottom"/>

    <com.easyhoms.easydoctor.common.view.MenuItem
        android:id="@+id/doctor_protactol_mi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:mi_describe="张"
        app:mi_title="@string/doctor_approve"
        app:mi_type="top"/>

    <com.easyhoms.easydoctor.common.view.MenuItem
        android:id="@+id/doctor_title_mi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mi_describe="主任医生"
        app:mi_next_visible="invisible"
        app:mi_title="@string/doctor_title"
        app:mi_type="center"/>

    <com.easyhoms.easydoctor.common.view.MenuItem
        android:id="@+id/special_project_mi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mi_describe="张"
        app:mi_title="@string/special_project"
        app:mi_type="bottom"/>

    <com.easyhoms.easydoctor.common.view.MenuItem
        android:id="@+id/introduce_mi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:mi_describe="张"
        app:mi_title="@string/introduce"
        app:mi_type="single"/>
</LinearLayout>
