<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".password.activity.ForgetPasswordActivity">

    <com.easyhoms.easydoctor.common.view.MyActionbar
        android:id="@+id/forget_ma"
        app:ma_bottom_line_visible="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ma_style="white"
        app:ma_title = "@string/login_forget_password"
        />


    <LinearLayout
        android:layout_below="@+id/forget_ma"
        android:id="@+id/forget_detail_total_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        >
        <com.easyhoms.easydoctor.common.view.DescribeEditView
            android:id="@+id/forget_phone_dev"
            app:dev_title="@string/phone"
            app:dev_hint="@string/enter_phone"
            app:dev_line_focus="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.easyhoms.easydoctor.common.view.DescribeEditView
            android:id="@+id/forget_auth_dev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dev_title="@string/auth"
            app:dev_hint="@string/auth"
            app:dev_line_focus="true"
            app:dev_auth_text="@string/send_auth_code"
            app:dev_auth_visible="true"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/forget_next_tv"
        android:text="@string/next"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:textSize="@dimen/text_16"
        android:gravity="center"
        android:layout_below="@+id/forget_detail_total_ll"
        android:background="@drawable/shape_round_bg_blue_tv"
        />

</RelativeLayout>
