<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    >

    <com.easyhoms.easydoctor.common.view.MyActionbar
        android:id="@+id/change_ma"
        app:ma_back_img_visible="true"
        app:ma_style="white"
        app:ma_bottom_line_visible="true"
        app:ma_title="@string/reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.easyhoms.easydoctor.common.view.DescribeEditView
        android:layout_below="@id/change_ma"
        app:dev_right_img_visible="true"
        android:id="@+id/change_password_dev"
        app:dev_title="@string/password"
        android:layout_marginTop="50dp"
        app:dev_line_focus="true"
        app:dev_hint="@string/enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:visibility="gone"
        android:layout_below="@id/change_password_dev"
        android:id="@+id/change_length_error_tv"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/register_passwrod_error"
        android:drawableLeft="@drawable/ic_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:visibility="gone"
        android:layout_below="@id/change_length_error_tv"
        android:id="@+id/change_format_error_tv"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:drawablePadding="10dp"
        android:text="@string/register_passwrod_right"
        android:drawableLeft="@drawable/ic_checkmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_below="@id/change_password_dev"
        android:id="@+id/change_sure_tv"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_round_bg_blue_tv"
        android:gravity="center"
        android:text="@string/make_sure"
        android:textColor="@color/white"
        android:textSize="@dimen/text_16"/>
</RelativeLayout>

